raw/ARSYAD SETIAWAN MUHAMMAD 6410 245150207111052/2024-11-14-08-31-15.ceg/compilation.txt
NT.java:8: error: incompatible types: double cannot be converted to double[]
        double[]input = input();
                             ^
1 error
Not compiled
